fixed footer colors, alignment and padding

--- a/style.css
+++ b/style.css
@@ -311,12 +311,14 @@ li {
     flex-wrap: wrap;
     margin: 0 auto;
     font-family: 'Kodchasan', sans-serif;
+    color: white;
 }
 .logo-bottom {
     margin: 0;
     flex: auto;
     font-size: 26px;
     text-align: center;
+    text-shadow: 0 0 8px rgba(255, 255, 255, 0.99);
 }
 .sitemap-container {
     flex: auto;
@@ -409,9 +411,12 @@ li {
     }
     .logo-bottom {
         text-align: left;
-        padding-left: 20px;
+        padding-left: 50px;
     }
     .copyright {
+        text-align: center;
+    }
+    .sitemap-container {
         text-align: right;
         padding-right: 50px;
     }
